# RPGProject

./: Output-VisualC++Refactoring.txt  RPGProject.sln
RPGProject/: .gitignore  BiomeGenerator.cpp  BiomeGenerator.h  Builder.cpp  Builder.h  CMakeLists.txt  Character.cpp  Character.h  CharacterBuilder.cpp  CharacterBuilder.h  Container.cpp  Container.h  Drawable.cpp  Drawable.h  GameState.cpp  GameState.h  Graphics.cpp  Graphics.h  Item.cpp  Item.h  Main.cpp  Map.cpp  Map.h  MapBuilder.cpp  MapBuilder.h  Player.cpp  Player.h  Portal.cpp  Portal.h  RPGProject.vcxproj  RPGProject.vcxproj.filters  SDLRenderer.cpp  SDLRenderer.h  Space.cpp  Space.h  Symbol.cpp  Symbol.h  TreeNode.cpp  TreeNode.h  World.cpp  (+1 more)
RPGProject/characters/: testchar.txt
RPGProject/config/: graphics.txt
RPGProject/maps/: test.txt  test2.txt
